--- a/rpcs/package.json
+++ b/rpcs/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-calendar-api": "^2.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
